--- a/assets/css/estilo.css
+++ b/assets/css/estilo.css
@@ -6,9 +6,16 @@
 }
 body {
 	font-family: Arial, sans-serif;
-	/*background-color: #dddddd;
-	color: rgba(0,0,0,1)*/
+	background-color: #ffffff;
+	color: rgba(0,0,0,1)
 	
+}
+div#limite{
+	width:1200px; 
+	background-color: #ffffff;
+	margin: -20px auto 0px auto;
+	box-shadow: 0px 0px 10px rgba(0,0,0,.5);
+	padding: 10px 10px 10px 10px;
 }
 p {
 	text-align: justify;
